:memo: 讨论完了低秩分解

--- a/src/KG/KRL/1606.ComplEx.md
+++ b/src/KG/KRL/1606.ComplEx.md
@@ -55,5 +55,56 @@ $$X \approx UV^T$$
 
 #### 1.2.3 特征值分解（EVD）
 
+特征值分解可以做到我们想要的：
 
+$$X = EWE^{-1}$$
 
+但这里通常用于 X 是实对称阵的情况，这是所有的 eigenvalues 和 eigenvectors 都存在于 real space 中，并且分解得到的 E 是一个正交阵：$E^T=E^{-1}$。但我们在这里比较关注 X 是非对称的情况，这时 EVD 不可能在 real space 中进行了，而是只存在于 complex space 中的 decomposition 了。
+
+这时，embedding $x \in \mathbb{C}^K$ 由 real vector component $Re(x)$ 和 imaginary vector component $Im(x)$ 组成，即 $x = Re(x) + iIm(x)$，这时的 dot product 定义为：
+
+$$<u, v> := \overline{u}^T v$$
+
++ $\overline{u}$ 是 vector $u$ 的共轭，$\overline{u}=Re(u)-iIm(u)$
+
+复数空间下的 EVD 可以写成：
+
+$$X = EW\overline{E}^{-1} = EW\overline{E}^{T}$$
+
++ 这里 $W \in \mathbb{C}^{n \times n}$ 是由特征值组成的对角阵；
++ $E \in \mathbb{C}^{n \times n}$ 是由特征向量组成的矩阵；
+
+由于 scores 是一个实数，因此我们让 X 取计算公式的实数部分，即：
+
+$$X = Re(EW\overline{E}^T)$$
+
+::: tip SVD v.s. EVD
+与 SVD 相比，EVD 具有两个关键的区别：
+
++ The eigenvalues are not necessarily positive or real;
++ for a given entity, its subject embedding vector is the complex conjugate of its object embedding vector.
+:::
+
+#### 1.2.3 低秩分解（Low-Rank Decomposition）
+
+为了让我们的 model 是 learnable 的，我们必须做出一些假设：我们所要处理的 binary relations 是具有较低的 sign-rank。
+
+::: warning sign-rank
+The sign-rank of a sign matrix
+is the smallest rank of a real matrix that has the same
+sign-pattern as $Y$ :
+
+$$rank_{\pm}(Y)=\min_{A \in R^{m \times n}} \{rank(A)|sign(A)=Y\}$$
+:::
+
+用 sign-rank 可以很好地衡量 sign matrix 的 complexity，并且关系到 model 的 learnability，并被一系列的 factorization model 所验证。
+
+当我们对低 sign-rank 的 matrix $Y$ 进行分解后，得到的矩阵的 rank 会比 $Y$ 低很多。通过将矩阵 $EW\overline{E}^{T}$ 压至 rank $K \lt n$，这时 $diag(W)$ 只有前 k 个值是非零的，这样也就可以直接将 W 表示为一个 $K \times K$ 的复数矩阵了，于是对于 embedding $e_s, e_o \in \mathbb{C}^K$ 有：
+
+$$\color{red}{X_{so}=Re(e_s^T W \overline{e}_o)}$$
+
+于是，我们将之前的讨论总结为如下三点：
+
+// TODO
+
+### 1.3 应用到 Multi-Relational Data
