:sparkles: 完成 ComplEx 模型的讲解

--- a/src/KG/KRL/1606.ComplEx.md
+++ b/src/KG/KRL/1606.ComplEx.md
@@ -105,6 +105,47 @@ $$\color{red}{X_{so}=Re(e_s^T W \overline{e}_o)}$$
 
 于是，我们将之前的讨论总结为如下三点：
 
-// TODO
+1. 我们的因式分解包含所有可能的二元关系；
+2. 通过构造，它可以准确地描述对称和反对称关系；
+3. **learnable 的关系可以通过简单的低秩分解来进行近似，并且将向量映射到复数空间中**。
 
 ### 1.3 应用到 Multi-Relational Data
+
+现在我们把刚刚讨论的只有一种 relation 的情况拓展到多关系的情况。
+
+#### 1.3.1 符号说明
+
++ $w_r \in \mathbb{C}^K$：an embedding of relation $r$
++ $\mathcal{R}$、$\mathcal{\varepsilon}$ 分别是 relations 和 entities 的 set
++ $\Omega$ 是所有 positive triples 的集合
+
+我们想做的是复原每一个 relation $r \in R$ 的 scores matrix $X_r$，并且对于 fact r(s, o)，其成立的概率等于：
+
+$$P(Y_{rso}=1)=\sigma(\phi(r,s,o;\Theta))$$
+
++ $\phi$ 是 scoring function
++ $\Theta$ 是对应模型的参数
+
+#### 1.3.2 目标
+
+对于 link prediction 的任务，我们的目标是对于 $r'(s', o') \notin \Omega$，计算出 $Y_{r's'o'}=1$ 的概率，从而预测该 triple 是否成立。
+
+#### 1.3.3 ComplEx 的 scoring function
+
+由于我们需要将 $\phi(r,s,o;\Theta)$ 用于预测 tensor $X$，因此可以得到下面的 scoring function：
+
+<center><img src="https://notebook-img-1304596351.cos.ap-beijing.myqcloud.com/img/image-20221019154229107.png" alt="image-20221019154229107" style="zoom:73%;" /></center>
+
+我们可以从两个不同的视角来看待这个模型所做的事情：
+
++ *Changing the representation*：相较于 DistMult，由于使用了共轭向量，因此可以表示非对称关系的 embedding；
++ *Changing the scoring function*：得分仅涉及对应于嵌入和关系的实部和虚部的实向量。
+
+当 $w_r = i Im(w_r)$，也就是只有虚部时，表示 antisymmetric 的关系；当 $w_r=Re(w_r)$，也就是只有实部时，表示 symmetric 的关系。所以：
+
++ 从代数上理解，relation embedding vector $w_r$ 就是将关系 relation 投影到 symmetric 和 antisymmetric 这两个方向上，然后再利用点积计算 scoring function；
++ 从图形上理解，relation embedding vector $w_r$ 可以视为实体嵌入向量 E 进行各向异性的缩放，然后再投影到 real subspace 上。
+
+## 2. SGD for the ComplEx model
+
+// TODO
